--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ p {
 /* HEADER */
 
 header {
-    background: url("images/texture.png");
+  background: url("images/texture.png");
 	position: absolute;
 	top: 0;
 	height: 250px;
@@ -73,8 +73,8 @@ nav {
 	right: 150px;
 	width: auto;
 	z-index: 100;
-    border: 1px solid #a3a3a3;
-    border-radius: 3px;
+  border: 1px solid #a3a3a3;
+  border-radius: 3px;
 	box-shadow: 0 0 4px rgba(0, 0, 0, 0.18);
 }
 
@@ -116,7 +116,7 @@ section {
 	padding: 85px 5%;
 	box-sizing: border-box;
 	font-size: 1.1em;
-    background: #fff;
+  background: #fff;
 }
 
 .section-header {
@@ -134,7 +134,7 @@ section span {
 }
 
 section:nth-of-type(even) {
-    background: #f5f4e7;
+  background: #f5f4e7;
 }
 
 
@@ -146,7 +146,8 @@ section:nth-of-type(even) {
 	background-size: cover;
 }
 
-.home1, .home2 {
+.home1,
+.home2 {
 	display: inline-block;
 	width: 45%;
 	vertical-align: top;
@@ -154,7 +155,8 @@ section:nth-of-type(even) {
 	font-weight: 600;
 }
 
-.home1 li, .home2 li {
+.home1 li,
+.home2 li {
 	font-family: Parisienne, Arial;
 	padding-bottom: 40px;
 	list-style-type: none;
@@ -169,16 +171,15 @@ section:nth-of-type(even) {
 }
 
 
-
 /* LOGOS */
 
 .logos {
-    width: 80%;
+  width: 80%;
 	margin: 0 auto 20px;
 	padding: 30px 6%;
 	box-sizing: border-box;
-    text-align: center;
-    background: #fff;
+  text-align: center;
+  background: #fff;
 	border: 1px solid rgba(181, 181, 181, 0.82);
 	border-radius: 3px;
 	box-shadow: 0 0 4px rgba(0, 0, 0, 0.18);
@@ -186,7 +187,7 @@ section:nth-of-type(even) {
 
 .logos img {
 	margin: 15px 30px;
-    display: inline-block;
+  display: inline-block;
 }
 
 
@@ -216,7 +217,11 @@ section:nth-of-type(even) {
 
 /* PORTFOLIO */
 
-#coding, #courses, #passions, #portfolio, #contact {
+#coding,
+#courses,
+#passions,
+#portfolio,
+#contact {
 	display: none;
 }
 
@@ -243,12 +248,12 @@ h2 {
 	display: inline-block;
 	font-family: "Sorts Mill Goudy", serif;
 	width: auto;
-    min-width: 400px;
-    height: 260px;
-    text-align: center;
-    box-sizing: border-box;
-    text-shadow: 1px 1px rgba(215, 215, 215, 0.72);
-    margin: 12px 10px;
+  min-width: 400px;
+  height: 260px;
+  text-align: center;
+  box-sizing: border-box;
+  text-shadow: 1px 1px rgba(215, 215, 215, 0.72);
+  margin: 12px 10px;
 	font-weight: 600;
 	letter-spacing: 0.05em;
 	transition: 0.6s;
@@ -275,8 +280,8 @@ h2 {
 
 .projects:hover {
 	-ms-transform: scale(1.1,1.1);
-    -webkit-transform: scale(1.1,1.1);
-    transform: scale(1.1,1.);
+  -webkit-transform: scale(1.1,1.1);
+  transform: scale(1.1,1.);
 }
 
 #drag-and-drop:hover,
@@ -379,7 +384,7 @@ label {
 /* FOOTER*/
 
 footer {
-    background: url("images/texture.png");
+  background: url("images/texture.png");
 	position: relative;
 	bottom: 0;
 	left: 0;
@@ -417,7 +422,6 @@ footer p {
 .links:hover {
 	text-decoration: underline;
 }
-
 
 
 /* MEDIA QUERIES */
@@ -473,7 +477,8 @@ footer p {
 		text-align: center;
 	}
 
-	.home1 li, .home2 li {
+	.home1 li,
+	.home2 li {
 		letter-spacing: 0.2em;
 		font-size: 1.15em;
 	}
@@ -506,7 +511,6 @@ footer p {
 		width: 95%;
 	}
 }
-
 
 @media screen and (max-width: 768px) {
 	body {
@@ -556,7 +560,6 @@ footer p {
 	}
 }
 
-
 @media screen and (max-width: 600px) {
 	body {
 		font-size: 0.8em;
@@ -570,7 +573,6 @@ footer p {
 	#home {
 		height: 500px;
 	}
-
 
 	#passions,
 	#coding,
